more content and layout to shopping.html

--- a/shopping.html
+++ b/shopping.html
@@ -126,17 +126,18 @@
         <img id="hero-image" src="hero-placeholder.jpg" alt="">
     </section>
 
-    <section id="home-about-section" class="text-center">
-        <h1 id="home-about-heading">Historic Swords</h1>
+    <section id="home-about-section" class="text-center md-5">
+        <h1 id="home-about-heading">Shopping in Swords</h1>
         <p id="home-about-p" class="offset-md-3 offset-1 col-10 col-md-6 mt-3">
-            Swords beckons with a rich blend of historic charm and vibrant modern life. Known for its historic
-            features, Swords Castle stands proudly as a testament to the town’s medieval past, offering glimpses
-            into Ireland's Norman heritage. Nearby, historic landmarks and scenic parks paint a picture of life
-            through the centuries, while local markets and contemporary eateries keep the town buzzing with
-            activity. A perfect blend of old and new, Swords is a must-visit for history buffs and adventurers
-            looking to experience the heart of North County Dublin.
+            Discover a vibrant shopping experience in Swords, where popular retail centers meet charming local boutiques. 
+            From the bustling Pavilions Shopping Centre with its variety of high-street brands to unique specialty stores, 
+            Swords has something for every shopper. Local cafés and eateries offer the perfect spot to relax and refuel, 
+            while seasonal markets bring a fresh mix of artisan products and local produce. With a lively blend of the 
+            familiar and the unique, Swords is a destination where shopping is more than just a pastime – it's an experience 
+            that celebrates community and style in North County Dublin.
         </p>
     </section>
+    
 
     <section>
         <div class="row" data-aos="fade-right">
@@ -144,35 +145,32 @@
                 <img class="history-image" src="assets/images/thumbnail-placeholder-.jpg" alt="">
             </div>
 
-            <div class="history-paragraph col-md-8">
+            <div class="history-paragraph col-md-8 p-5">
                 <h2>
-                    Swords Castle
+                    Pavillions Shopping Centre
                 </h2>
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium corporis ratione ab numquam
-                    similique ea, perspiciatis eum assumenda dignissimos, asperiores voluptate, quia quibusdam
-                    suscipit eligendi iste. Voluptate qui vitae numquam?
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Animi veritatis eligendi voluptatum explicabo quis provident sint obcaecati
-                    fugiat modi expedita maxime eaque corporis quam sapiente officiis, ratione ad labore porro?
-                </p>
+                <p> The Pavillions Shopping Centre is the heart of retail in Swords, offering a wide range of shops,
+                    dining options, and entertainment. From high street brands to local boutiques, it provides an ideal
+                    destination for shopping enthusiasts. Whether you're picking up essentials, enjoying a leisurely
+                    coffee, or catching the latest movie, the Pavillions is a vibrant space where all ages can enjoy
+                    themselves.</p>
+                <p> The Centre also hosts regular events, attracting crowds from all over the area, making it a bustling
+                    hub in North Dublin. With convenient parking, excellent transport links, and a variety of options to
+                    suit every taste and budget, it’s no wonder the Pavillions is one of Swords’ most popular spots.</p>
             </div>
         </div>
         <div class="row" data-aos="fade-left">
-            <div class="history-paragraph col-md-8">
+            <div class="history-paragraph col-md-8 p-5">
                 <h2>
-                    Round Tower Heading
+                    Swords Main Street
                 </h2>
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium corporis ratione ab numquam
-                    similique ea, perspiciatis eum assumenda dignissimos, asperiores voluptate, quia quibusdam
-                    suscipit eligendi iste. Voluptate qui vitae numquam?
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Animi veritatis eligendi voluptatum explicabo quis provident sint obcaecati
-                    fugiat modi expedita maxime eaque corporis quam sapiente officiis, ratione ad labore porro?
-                </p>
+                <p> Swords Main Street is a lively mix of old and new, lined with charming shops, cafes, and
+                    restaurants. As the town's main thoroughfare, it offers a unique blend of modern amenities alongside
+                    traditional Irish culture. Whether you're strolling past historic buildings or browsing through
+                    local stores, Main Street is the perfect place to soak in the essence of Swords.</p>
+                <p> The street is also home to a vibrant community that regularly participates in local events,
+                    festivals, and markets. Its welcoming atmosphere and rich heritage make it a must-visit for anyone
+                    wanting to experience the local charm and energy of this fast-growing town.</p>
             </div>
             <div class="col-md-4">
                 <img class="history-image" src="assets/images/thumbnail-placeholder-.jpg" alt="">
@@ -183,19 +181,18 @@
                 <img class="history-image" src="assets/images/thumbnail-placeholder-.jpg" alt="">
             </div>
 
-            <div class="history-paragraph col-md-8">
+            <div class="history-paragraph col-md-8 p-5">
                 <h2>
-                    Another historical feature
+                    Swords Village Gift Card
                 </h2>
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium corporis ratione ab numquam
-                    similique ea, perspiciatis eum assumenda dignissimos, asperiores voluptate, quia quibusdam
-                    suscipit eligendi iste. Voluptate qui vitae numquam?
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Animi veritatis eligendi voluptatum explicabo quis provident sint obcaecati
-                    fugiat modi expedita maxime eaque corporis quam sapiente officiis, ratione ad labore porro?
-                </p>
+                <p> The Swords Village Gift Card is the ideal present for anyone looking to explore all that Swords has
+                    to offer. Whether it's shopping, dining, or enjoying local attractions, this versatile gift card
+                    lets recipients choose from a variety of experiences. It’s the perfect way to give the gift of
+                    choice, allowing people to treat themselves to something special in Swords.</p>
+                <p> Supporting local businesses, the Swords Village Gift Card can be used in numerous shops,
+                    restaurants, and services across the area, making it a fantastic way to experience the vibrant
+                    community and the diverse offerings that Swords is known for. It’s also a great option for tourists
+                    looking to explore the town’s best spots while giving back to the local economy.</p>
             </div>
         </div>
     </section>
