--- a/about.html
+++ b/about.html
@@ -153,8 +153,8 @@
                     <div class="about-card card bg-dark text-white">
                         <img src="assets/images/swords-castle-thumbnail.jpg" class="card-img" alt="Swords Castle">
                         <div class="card-img-overlay d-flex align-items-center justify-content-center">
-                            <div class="text-center">
-                                <h5 class="card-title">Swords Castle</h5>
+                            <div class="text-center about-card-text">
+                                <h4 class="card-title">Swords Castle</h5>
                                 <p class="card-text">Step back in time and explore the historic Swords Castle, a 13th-century fortress that offers a glimpse into Ireland’s medieval past. Its fascinating ruins are a must-see for history enthusiasts.</p>
                             </div>
                         </div>
@@ -166,8 +166,8 @@
                     <div class="about-card card bg-dark text-white">
                         <img src="assets/images/sowrds-park.jpg" class="card-img" alt="Parks and Green Spaces">
                         <div class="card-img-overlay d-flex align-items-center justify-content-center">
-                            <div class="text-center">
-                                <h5 class="card-title">Parks and Green Spaces</h5>
+                            <div class="text-center about-card-text">
+                                <h4 class="card-title">Parks and Green Spaces</h5>
                                 <p class="card-text">Swords is known for its beautiful parks and scenic green spaces. Whether you’re looking for a relaxing stroll or a place for a family picnic, Swords offers a range of outdoor activities in tranquil settings.</p>
                             </div>
                         </div>
@@ -179,8 +179,8 @@
                     <div class="about-card card bg-dark text-white">
                         <img src="assets/images/sowrds-village.jpg" class="card-img" alt="Swords Town Centre">
                         <div class="card-img-overlay d-flex align-items-center justify-content-center">
-                            <div class="text-center">
-                                <h5 class="card-title">Swords Town Centre</h5>
+                            <div class="text-center about-card-text">
+                                <h4 class="card-title">Swords Town Centre</h5>
                                 <p class="card-text">The vibrant heart of Swords, the town centre blends modern shopping with traditional charm. Explore a variety of stores, restaurants, and cafés, all surrounded by rich history and lively culture.</p>
                             </div>
                         </div>
