add meta tags for seo

--- a/history.html
+++ b/history.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover Swords, a vibrant town north of Dublin, blending historic charm, modern shopping, and community spirit. Explore now!">
+    <meta name="keywords" content="Swords, Dublin, Ireland, historic sites, shopping, gift cards, travel, tourism">
+    <meta name="author" content="Visit Swords">
     <title>History | Visit Swords
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,7 +18,7 @@
 
 <body>
     <!--Nav-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand col-4" href="index.html">Logo</a>
             <button class="navbar-toggler" id="collapse-button" type="button" data-bs-toggle="collapse"
@@ -128,8 +131,8 @@
             <img id="hero-image" src="hero-placeholder.jpg" alt="">
         </section>
 
-        <section id="home-about-section" class="text-center">
-            <h1 id="home-about-heading">Historic Swords</h1>
+        <section id="home-about-section" class="text-center light-blue pt-5 pb-5">
+            <h1>Historic Swords</h1>
             <p id="home-about-p" class="offset-md-3 offset-1 col-10 col-md-6 mt-3 mb-5">
                 Swords beckons with a rich blend of historic charm and vibrant modern life. Known for its historic
                 features, Swords Castle stands proudly as a testament to the town’s medieval past, offering glimpses
@@ -154,7 +157,7 @@
                     <p>The castle's historical significance is matched by its peaceful surroundings. Despite its strategic importance in ancient times, the castle today serves as a tranquil site where locals and tourists alike can reflect on Ireland’s medieval heritage while enjoying scenic views of the town.</p>
                 </div>
             </div>
-            <div class="row" data-aos="fade-left">
+            <div class="row light-blue" data-aos="fade-left">
                 <div class="history-paragraph col-md-8 p-5">
                     <h2>
                         Round Tower
