--- a/about.html
+++ b/about.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover Swords, a vibrant town north of Dublin, blending historic charm, modern shopping, and community spirit. Explore now!">
+    <meta name="keywords" content="Swords, Dublin, Ireland, historic sites, shopping, gift cards, travel, tourism">
+    <meta name="author" content="Visit Swords">
     <title>About | Visit Swords
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,7 +18,7 @@
 <body>
 
     <!--Nav-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand col-4" href="index.html">Logo</a>
             <button class="navbar-toggler" id="collapse-button" type="button" data-bs-toggle="collapse"
@@ -137,7 +140,7 @@
                 <a href="#home-about-section"><i class="bi bi-chevron-double-down"></i></a>
             </div>
         </section>
-        <section class="d-flex align-items-center flex-column">
+        <section class="d-flex align-items-center flex-column light-blue mb-5">
             
             <div class="d-flex justify-content-center">
                 <h3 id="about-page-text" class="pt-5 text-center pb-5">
