--- a/shopping.html
+++ b/shopping.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover Swords, a vibrant town north of Dublin, blending historic charm, modern shopping, and community spirit. Explore now!">
+    <meta name="keywords" content="Swords, Dublin, Ireland, historic sites, shopping, gift cards, travel, tourism">
+    <meta name="author" content="Visit Swords">
     <title>Shopping | Visit Swords
     </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,7 +17,7 @@
 </head>
 
 <!--Nav-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
         <a class="navbar-brand col-4" href="index.html">Logo</a>
         <button class="navbar-toggler" id="collapse-button" type="button" data-bs-toggle="collapse"
@@ -126,7 +129,7 @@
         <img id="hero-image" src="hero-placeholder.jpg" alt="">
     </section>
 
-    <section id="home-about-section" class="text-center md-5">
+    <section id="home-about-section" class="text-center md-5 light-blue">
         <h1 id="home-about-heading">Shopping in Swords</h1>
         <p id="home-about-p" class="offset-md-3 offset-1 col-10 col-md-6 mt-3">
             Discover a vibrant shopping experience in Swords, where popular retail centers meet charming local boutiques. 
@@ -159,7 +162,7 @@
                     suit every taste and budget, it’s no wonder the Pavillions is one of Swords’ most popular spots.</p>
             </div>
         </div>
-        <div class="row" data-aos="fade-left">
+        <div class="row light-blue" data-aos="fade-left">
             <div class="history-paragraph col-md-8 p-5">
                 <h2>
                     Swords Main Street
