--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Discover Swords, a vibrant town north of Dublin, blending historic charm, modern shopping, and community spirit. Explore now!">
+    <meta name="description"
+        content="Discover Swords, a vibrant town north of Dublin, blending historic charm, modern shopping, and community spirit. Explore now!">
     <meta name="keywords" content="Swords, Dublin, Ireland, historic sites, shopping, gift cards, travel, tourism">
     <meta name="author" content="Visit Swords">
     <title>Home | Visit Swords
@@ -21,7 +22,8 @@
     <!--Nav-->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand col-4" href="index.html">Logo</a>
+            <a class="navbar-brand col-4" href="index.html"><img id="logo" src="assets/images/visit-swords-logo.png"
+                    alt="Visit Swords Logo"></a>
             <button class="navbar-toggler" id="collapse-button" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -159,31 +161,38 @@
             <div class="row pt-5">
                 <div class="col-12 col-md-4 text-center d-flex justify-content-center" data-aos="fade-up">
                     <div class="card d-flex justify-content-center mb-5" style="width: 18rem;">
-                        <img src="assets/images/swords-church.jpg" class="card-img-top home-card-img" alt="Church in Swords Castle">
+                        <img src="assets/images/swords-church.jpg" class="card-img-top home-card-img"
+                            alt="Church in Swords Castle">
                         <div class="card-body">
                             <h5 class="card-title">History</h5>
-                            <p class="card-text">Discover Swords’ rich past, from ancient castles and heritage sites to tales of Ireland’s storied history woven into every corner.</p>
+                            <p class="card-text">Discover Swords’ rich past, from ancient castles and heritage sites to
+                                tales of Ireland’s storied history woven into every corner.</p>
                             <a href="history.html" class="btn btn-primary">Learn More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 text-center d-flex justify-content-center" data-aos="fade-up">
                     <div class="card d-flex justify-content-center mb-5" style="width: 18rem;">
-                        <img src="assets/images/pavilions thumbnail.jpg" class="card-img-top home-card-img" alt="Swords pavilions Logo">
+                        <img src="assets/images/pavilions thumbnail.jpg" class="card-img-top home-card-img"
+                            alt="Swords pavilions Logo">
                         <div class="card-body">
                             <h5 class="card-title">Shopping</h5>
-                            <p class="card-text">Explore shopping destinations in Swords, from high-street brands to local boutiques, offering something special for everyone.</p>
+                            <p class="card-text">Explore shopping destinations in Swords, from high-street brands to
+                                local boutiques, offering something special for everyone.</p>
                             <a href="shopping.html" class="btn btn-primary">Discover More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-4 text-center d-flex justify-content-center" data-aos="fade-up">
                     <div class="card d-flex justify-content-center mb-5" style="width: 18rem;">
-                        <img src="assets/images/gift-card.jpg" class="card-img-top home-card-img" alt="Swords Gift card">
+                        <img src="assets/images/gift-card.jpg" class="card-img-top home-card-img"
+                            alt="Swords Gift card">
                         <div class="card-body">
                             <h5 class="card-title">Gift Card</h5>
-                            <p class="card-text">Treat someone to a memorable experience in Swords with gift cards for shopping, dining, and local attractions.</p>
-                            <a data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-primary">Get a Gift card</a>
+                            <p class="card-text">Treat someone to a memorable experience in Swords with gift cards for
+                                shopping, dining, and local attractions.</p>
+                            <a data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-primary">Get a Gift
+                                card</a>
                         </div>
                     </div>
                 </div>
