--- a/shopping.html
+++ b/shopping.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Discover Swords, a vibrant town north of Dublin, blending historic charm, modern shopping, and community spirit. Explore now!">
+    <meta name="description"
+        content="Discover Swords, a vibrant town north of Dublin, blending historic charm, modern shopping, and community spirit. Explore now!">
     <meta name="keywords" content="Swords, Dublin, Ireland, historic sites, shopping, gift cards, travel, tourism">
     <meta name="author" content="Visit Swords">
     <title>Shopping | Visit Swords
@@ -19,7 +20,8 @@
 <!--Nav-->
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
-        <a class="navbar-brand col-4" href="index.html">Logo</a>
+        <a class="navbar-brand col-4" href="index.html"><img id="logo" src="assets/images/visit-swords-logo.png"
+                alt="Visit Swords Logo"></a>
         <button class="navbar-toggler" id="collapse-button" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -28,7 +30,7 @@
         <div class="collapse navbar-collapse col-4" id="navbarTogglerDemo02">
             <ul id="nav-list" class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
@@ -37,7 +39,7 @@
                     <a class="nav-link" href="history.html">History</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="shopping.html">Shopping</a>
+                    <a class="nav-link" href="shopping.html">Shopping</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -60,7 +62,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="row g-3">
-                                            <div class="col-md-6 d-grid">
+                                            <div class="col-md-6 d-grid p-2">
                                                 <div class="modal-form-input">
                                                     <label for="quantity" class="form-label">Quantity</label>
                                                     <input type="number" class="form-control" id="quantity" min="1"
@@ -80,7 +82,7 @@
                                                 </div>
                                             </div>
 
-                                            <div class="col-md-6 d-grid">
+                                            <div class="col-md-6 d-grid p-2">
                                                 <div class="modal-form-input">
                                                     <label for="email" class="form-label">Email</label>
                                                     <div class="input-group">
@@ -120,6 +122,7 @@
             </div>
         </div>
     </div>
+    </div>
 </nav>
 
 <main>
@@ -132,15 +135,18 @@
     <section id="home-about-section" class="text-center md-5 light-blue">
         <h1 id="home-about-heading">Shopping in Swords</h1>
         <p id="home-about-p" class="offset-md-3 offset-1 col-10 col-md-6 mt-3">
-            Discover a vibrant shopping experience in Swords, where popular retail centers meet charming local boutiques. 
-            From the bustling Pavilions Shopping Centre with its variety of high-street brands to unique specialty stores, 
-            Swords has something for every shopper. Local cafés and eateries offer the perfect spot to relax and refuel, 
-            while seasonal markets bring a fresh mix of artisan products and local produce. With a lively blend of the 
-            familiar and the unique, Swords is a destination where shopping is more than just a pastime – it's an experience 
+            Discover a vibrant shopping experience in Swords, where popular retail centers meet charming local
+            boutiques.
+            From the bustling Pavilions Shopping Centre with its variety of high-street brands to unique specialty
+            stores,
+            Swords has something for every shopper. Local cafés and eateries offer the perfect spot to relax and refuel,
+            while seasonal markets bring a fresh mix of artisan products and local produce. With a lively blend of the
+            familiar and the unique, Swords is a destination where shopping is more than just a pastime – it's an
+            experience
             that celebrates community and style in North County Dublin.
         </p>
     </section>
-    
+
 
     <section>
         <div class="row" data-aos="fade-right">
